# zero2prod

./: -  .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20220609205943_create_subscriptions_table.sql  20220621194051_make_status_not_null_in_subscriptions.sql  20220621194705_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
