[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.137"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = "0.4.19"
log = "0.4.17"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-actix-web = "0.5.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
validator = "0.15.0"
wiremock = "0.5.13"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.12.0"
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.5.0"
serde_json = "1.0.81"
